--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,6 +372,36 @@ a.blob-btn {
   display: block;
 }
 
+/* line 2, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_div.scss */
+.espaco-plano-1 {
+  height: 169px;
+}
+
+/* line 6, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_div.scss */
+.espaco-plano-2 {
+  height: 144px;
+}
+
+/* line 10, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_div.scss */
+.espaco-plano-4 {
+  height: 293px;
+}
+
+/* line 1, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_espacos.scss */
+.espaco-img-index-superior {
+  height: 80px;
+}
+
+/* line 5, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_espacos.scss */
+.espaco-img-index {
+  height: 50px;
+}
+
+/* line 9, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_espacos.scss */
+.espaco-img-index-2 {
+  height: 70px;
+}
+
 @font-face {
   font-family: "Ancient";
   src: url("../../fonts/Ancient-Medium.woff");
@@ -392,102 +422,128 @@ a.blob-btn {
   src: url("../../fonts/Fasthand-Regular.ttf");
 }
 
-/* line 22, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 24, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-12 {
   font-size: 12px;
 }
 
-/* line 26, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 28, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-14 {
   font-size: 14px;
 }
 
-/* line 30, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 32, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 34, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 36, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-16 {
   font-size: 16px;
 }
 
-/* line 38, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 40, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-18 {
   font-size: 18px;
 }
 
-/* line 42, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 44, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-19 {
   font-size: 19px;
 }
 
-/* line 46, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
-.font-size-20 {
+/* line 48, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+.font-size-20, .texto-index {
   font-size: 20px;
 }
 
-/* line 50, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 52, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-22 {
   font-size: 22px;
 }
 
-/* line 54, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 56, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-24 {
   font-size: 24px;
 }
 
-/* line 58, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 60, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-25 {
   font-size: 25px;
 }
 
-/* line 62, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 64, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .font-size-26 {
   font-size: 26px;
 }
 
-/* line 66, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 68, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+.font-size-28 {
+  font-size: 28px;
+}
+
+/* line 72, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+.font-size-30 {
+  font-size: 30px;
+}
+
+/* line 76, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+.font-size-32 {
+  font-size: 32px;
+}
+
+/* line 80, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+.font-size-48 {
+  font-size: 48px;
+}
+
+/* line 84, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+.texto-index {
+  color: #007bff;
+  text-align: left;
+}
+
+/* line 90, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .texto {
   font-size: 1.5em;
   font-family: "Times New Roman", Times, serif;
 }
 
-/* line 71, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 95, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .negrito {
   font-weight: bold;
 }
 
-/* line 75, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 99, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .italico {
   font-style: italic;
 }
 
-/* line 79, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 103, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 h1.ancient {
   font-size: 3em;
   font-family: "Ancient";
 }
 
-/* line 84, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 108, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 h2.bring {
   font-family: "Bring";
   font-size: 3em;
 }
 
-/* line 89, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 113, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 span.fasthand {
   font-family: "Fasthand";
   font-size: 1.3em;
 }
 
-/* line 94, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 118, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 h3.madelina {
   font-size: 3em;
   font-family: "Madelina";
 }
 
-/* line 99, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 123, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character,
 .animate-character-formatura,
 .animate-character-formatura-2,
@@ -504,51 +560,51 @@ h3.madelina {
   font-weight: bold;
 }
 
-/* line 116, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 140, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character,
 .animate-character-formatura,
 .animate-character-formatura-2,
 .animate-character-contrato {
-  animation: textclip 3s linear infinite;
+  animation: textclip 5s linear infinite;
 }
 
-/* line 123, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 147, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character-msg {
   animation: textclip 0.5s linear infinite;
 }
 
-/* line 127, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 151, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character,
 .animate-character-msg {
   text-transform: uppercase;
   background-image: linear-gradient(-225deg, #007bff 0%, #28a745 20%, #ffc107 40%, #fd9902 60%, #e703fc 80%, #dc3545 100%);
 }
 
-/* line 141, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 165, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character-contrato {
   text-transform: uppercase;
   background-image: linear-gradient(-225deg, #28a745 0%, #ffc107 33%, #007bff 66%);
 }
 
-/* line 151, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 175, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character {
   font-size: 50px;
 }
 
-/* line 155, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 179, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character-formatura,
 .animate-character-msg,
 .animate-character-contrato {
   font-size: 20px;
 }
 
-/* line 161, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 185, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character-formatura {
   text-transform: uppercase;
   background-image: linear-gradient(-225deg, #e703fc 0%, #7a0a85 20%, #ff0707 40%, #5e0786 60%, #e703fc 80%, #dc3545 100%);
 }
 
-/* line 174, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
+/* line 198, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_fonts.scss */
 .animate-character-formatura-2 {
   background-image: linear-gradient(-225deg, #e703fc 0%, #7a0a85 20%, #ff0707 40%, #5e0786 60%, #e703fc 80%, #dc3545 100%);
   font-size: 15px;
@@ -597,13 +653,19 @@ footer {
 }
 
 /* line 19, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_imagens.scss */
-.img2 {
-  background-color: white;
+.imagem5 {
+  z-index: 1;
 }
 
 /* line 23, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_imagens.scss */
 .img3 {
   background-image: url(../../img/fotos/imagem6.jpg);
+}
+
+/* line 27, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_imagens.scss */
+div.row > div.col-md-12 > div.col-sm-10 {
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 /* line 3, ../../xampp/htdocs/ResolveSystemsOnLine/scss/_inputs.scss */
@@ -748,40 +810,40 @@ ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:focus {
 }
 
 @media (max-width: 575.98px) {
-  /* line 19, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 21, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   p.recuo-primeira-linha {
     text-indent: 0;
   }
-  /* line 23, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 25, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .voltar-topo {
     padding-bottom: 50px;
   }
-  /* line 27, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 29, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   #video {
     width: 345px;
     height: 213px;
   }
-  /* line 32, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 34, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   body {
     margin-bottom: 200px;
   }
-  /* line 37, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 39, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .conteudo {
     padding-bottom: 100px;
   }
-  /* line 41, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 43, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .carousel-item {
     height: 650px;
   }
-  /* line 45, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 47, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .espaco-pre-footer {
-    height: 150px;
+    height: 100px;
   }
-  /* line 49, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 51, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .desaparece-sm {
     display: none;
   }
-  /* line 53, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 55, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .lg {
     display: none;
   }
@@ -789,32 +851,32 @@ ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:focus {
 
 /*Extra small devices (portrait phones, menor que 576px)*/
 @media (min-width: 576px) and (max-width: 767.98px) {
-  /* line 61, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 63, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   #video {
-    width: 460px;
-    height: 355px;
+    width: 100%;
+    height: 100%;
   }
-  /* line 66, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 68, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .voltar-topo {
     padding-bottom: 35px;
   }
-  /* line 71, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 73, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .conteudo {
     padding-bottom: 75px;
   }
-  /* line 75, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 77, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .espaco-pre-footer {
     height: 150px;
   }
-  /* line 79, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 81, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .desaparece-md {
     display: none;
   }
-  /* line 83, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 85, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   body {
     margin-bottom: 200px;
   }
-  /* line 87, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 89, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .lg {
     display: none;
   }
@@ -822,23 +884,23 @@ ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:focus {
 
 /*Small devices (landscape phones, 576px e maiores)*/
 @media (min-width: 768px) and (max-width: 990.98px) {
-  /* line 95, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 97, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   p.recuo-primeira-linha {
     text-indent: 20px;
   }
-  /* line 99, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 101, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .voltar-topo {
     padding-bottom: 50px;
   }
-  /* line 104, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 106, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .conteudo {
     padding-bottom: 75px;
   }
-  /* line 108, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 110, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .espaco-pre-footer {
     height: 150px;
   }
-  /* line 112, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 114, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .lg {
     display: none;
   }
@@ -846,24 +908,24 @@ ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:focus {
 
 /*Medium devices (tablets, 768px e maiores)*/
 @media (min-width: 991px) and (max-width: 1199.98px) {
-  /* line 120, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 122, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   p.recuo-primeira-linha {
     text-indent: 40px;
   }
-  /* line 124, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 126, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   #video {
     width: 576px;
     height: 444px;
   }
-  /* line 129, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 131, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .voltar-topo {
     padding-bottom: 20px;
   }
-  /* line 133, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 135, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .espaco-pre-footer {
     height: 50px;
   }
-  /* line 137, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 139, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .sm {
     display: none;
   }
@@ -871,29 +933,29 @@ ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:focus {
 
 /*Large devices (desktops, 992px e maiores)*/
 @media (min-width: 1200px) {
-  /* line 145, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 147, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   p.recuo-primeira-linha {
     text-indent: 50px;
   }
-  /* line 149, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 151, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .voltar-topo {
     padding-bottom: 30px;
   }
-  /* line 153, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 155, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .espaco-pre-footer {
     height: 50px;
   }
-  /* line 157, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 159, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   body {
     margin-bottom: 100px;
   }
-  /* line 161, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+  /* line 163, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .sm {
     display: none;
   }
 }
 
-/* line 167, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 169, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 html,
 body .parallax {
   margin: 0;
@@ -901,22 +963,22 @@ body .parallax {
   height: 100%;
 }
 
-/* line 174, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 176, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.justificado {
   text-align: justify;
 }
 
-/* line 178, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 180, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 hr.divisor {
   border: 1px dotted #007bff;
 }
 
-/* line 183, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 185, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa div {
   background: #ffffffb0;
 }
 
-/* line 187, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 189, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .carousel-caption {
   width: 60%;
 }
@@ -927,96 +989,96 @@ hr.divisor {
   }
 }
 
-/* line 200, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 202, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .bg-cinza {
   background-color: #5c5c5c;
 }
 
-/* line 204, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 206, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-cinza {
   color: #5c5c5c;
 }
 
-/* line 209, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 211, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .larger-checkbox {
   width: 20px;
   height: 20px;
 }
 
-/* line 221, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 223, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .video-menor {
   max-width: 30%;
 }
 
-/* line 225, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 227, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.cor-paragrafo {
   color: black;
 }
 
-/* line 230, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 232, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .contatos {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-/* line 237, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 239, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div#mapa {
   float: left;
   width: 310px;
   margin-left: 37px;
 }
 
-/* line 243, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 245, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div.font-reduzida {
   font-size: 12px;
 }
 
-/* line 247, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 249, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-button {
   font-size: 20px;
   padding: 10px 50px;
 }
 
-/* line 252, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 254, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-grande {
   font-size: 30px;
 }
 
-/* line 256, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 258, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-20 {
   font-size: 20px;
 }
 
-/* line 267, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 269, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 textarea {
   overflow: hidden;
   resize: none;
 }
 
-/* line 272, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 274, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .link-visualiza-mensagem,
 .link-visualiza-mensagem:hover,
 .link-visualiza-mensagem:focus {
   text-decoration: none;
 }
 
-/* line 278, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 280, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.recuo-primeira-linha,
 .recuo-primeira-linha {
   text-indent: 25px;
 }
 
-/* line 284, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 286, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-no {
   display: none;
 }
 
-/* line 288, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 290, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-yes {
   display: contents;
 }
 
-/* line 293, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 295, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-link {
   font-size: 25px;
 }
