--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@
 @import 'carousel';
 @import 'clock';
 @import 'display';
+@import 'div';
+@import 'espacos';
 @import 'fonts';
 @import 'footer';
 @import 'formatacao';
@@ -43,7 +45,7 @@
 	}
 
 	.espaco-pre-footer {
-		height: 150px;
+		height: 100px;
 	}
 
 	.desaparece-sm {
@@ -59,8 +61,8 @@
 @media (min-width: 576px) and (max-width: 767.98px) {
 	
 	#video {
-		width: 460px;
-		height: 355px;
+		width: 100%;
+		height: 100%;
 	}
 
 	.voltar-topo {
