--- a/scss/_imagens.scss
+++ b/scss/_imagens.scss
@@ -28,3 +28,11 @@ div.row > div.col-md-12 > div.col-sm-10 {
 	padding-right: 0px;
 	padding-left: 0px;
 }
+
+img.width {
+	width: 100px;	
+}
+
+img.width-maior {
+	width: 120px;	
+}
