--- a/scss/_espacos.scss
+++ b/scss/_espacos.scss
@@ -1,3 +1,5 @@
+//ESPAÇOS
+
 .espaco-img-index-superior {
 	height: 80px;
 }
@@ -8,4 +10,30 @@
 
 .espaco-img-index-2 {
 	height: 70px;
+}
+
+.espaco-plano-1 {
+    height: 145px;
+}
+
+.espaco-plano-2 {
+    height: 128px;
+}
+
+.espaco-plano-4 {
+    height: 293px;
+}
+
+.espaco-plano-rapido {
+	height: 38px;
+}
+
+.espaco-consulta-dominio {
+	height: 103px;
+}
+
+// CONTATOS
+.contatos {
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
