--- a/scss/_espacos.scss
+++ b/scss/_espacos.scss
@@ -29,7 +29,15 @@
 }
 
 .espaco-consulta-dominio {
-	height: 99px;
+	height: 151px;
+}
+
+.voltar-topo {
+	margin-bottom: 70px;
+}
+
+.espaco-index {
+	height: 25px;
 }
 
 // CONTATOS
