--- a/scss/_espacos.scss
+++ b/scss/_espacos.scss
@@ -36,12 +36,27 @@
 	margin-bottom: 70px;
 }
 
+.espaco-pre-footer {
+	height: 90px;
+}
+
 .espaco-index {
 	height: 25px;
 }
 
 // CONTATOS
-.contatos {
-	padding-top: 10px;
-	padding-bottom: 10px;
+.separador-telefone-contato {
+	height: 10px;
+}
+
+#encontre {
+	margin-top: 30px;
+}
+
+.espaco-endereco-contato {
+	height: 60px;
+}
+
+.espaco-seta-endereco-contato {
+	height: 110px;
 }
