--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -248,6 +248,16 @@ h3.madelina {
 	color: $cinza;
 }
 
+// FONTES VARIAVEIS
+// CONTATOS
+.font-titulo-contatos {
+	font-size: 48px;
+}
+
+.font-link-telefone-contatos {
+	font-size: 24px;
+}
+
 // CLASSES PARA CORRIGIR QUANDO ACHAR
 div.font-reduzida {
 	font-size:12px;
